--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Create a text file 
         run: |
-        echo "Hello me" > ${{ github.workspace }}/dist/data/
+        echo "Hello me" > ${{ github.workspace }}/dist/data/demo.txt
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
         git config --global user.email "username@users.noreply.github.com"
         git pull
