--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -6,16 +6,17 @@ jobs:
     env: 
       CI_COMMIT_MESSAGE: Github Actions CI Build Artifacts
       CI_COMMIT_AUTHOR: Github Actions CI
-      GITHUB_ACTIONS_DEFAULT_DIR: ${{ github.workspace }}
+      DATA_DIR: ${{ github.workspace }}/dist/data/
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+        working-directory: ${{ env.DATA_DIR }}
       - name: Create a text file 
         run: |
-        echo "Hello me" > ${{ github.workspace }}/dist/data/demo.txt
+        echo "Hello me" > demo.txt
         git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
         git config --global user.email "username@users.noreply.github.com"
         git pull
-        git add ./dist/data/*
+        git add ${{ env.CI_COMMIT_MESSAGE }}
         git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
         git push
