--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,10 +12,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Create a text file 
         run: |
-          echo "Hello me" > ${{ env.DATA_DIR }}demo.txt
+          echo "Hello me" > demo.txt
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
           git config --global user.email "username@users.noreply.github.com"
-          git pull
           git add ${{ env.CI_COMMIT_MESSAGE }}
           git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
           git push
