--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,9 +12,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Create a text file 
         run: |
-          echo "Hello me" > demo.txt
+          date > demo.txt
+          ls -la
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
           git config --global user.email "username@users.noreply.github.com"
-          git add ${{ env.CI_COMMIT_MESSAGE }}
+          git add .
           git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
           git push
