--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -11,8 +11,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Create a text file 
+        working-directory: ${{ env.DATA_DIR }}
         run: |
-          date > ${{ env.DATA_DIR }}demo.txt
+          date > demo.txt
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
           git config --global user.email "username@users.noreply.github.com"
           git add .
