--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -6,7 +6,7 @@ jobs:
     env: 
       CI_COMMIT_MESSAGE: Github Actions CI Build Artifacts
       CI_COMMIT_AUTHOR: Github Actions CI
-      # DATA_DIR: ./dist/data/
+      DATA_DIR: ${{ github.workspace }}/dist/data/
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
