--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,22 +1,34 @@
 name: GitHub Actions Demo
 on: [push]
 jobs:
-  brand-new-job:
+  ASX Data Loader:
     runs-on: ubuntu-latest # look for a lighter image
     env: 
-      CI_COMMIT_MESSAGE: Github Actions CI Build Artifacts
-      CI_COMMIT_AUTHOR: Github Actions CI
-      DATA_DIR: ${{ github.workspace }}/dist/data/
+      CI_COMMIT: Github Actions CI
+      GITHUB_ACTIONS_ROOT_DIR: ${{ github.workspace }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      # - name: tsc compile
-      #   uses: iCrawl/action-tsc@v1
-      - name: Create a text file 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '12' 
+      - name: Install packages
+        # Similar to npm install, except it's meant to be used in automated environments to make sure a clean install of your dependencies.
+        run: npm ci
+      - name: Build Node
+        run: npm run package # npm run build?
+      - name: Copy all non-TS files in 'src' folder to 'dist' folder
         run: |
-          node ./src/scripts/test.js
-          git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+          cpy './src/**/*' '!./src/**/*.ts' './dist/'"
+      - name: Transpile TS files
+        uses: iCrawl/action-tsc@v1
+      - name: Create ASX data files 
+        run: |
+          node ./dist/scripts/asx.js
+      - name: Commit to the repo
+        run: |
+          git config --global user.name "${{ env.CI_COMMIT }}"
           git config --global user.email "username@users.noreply.github.com"
           git add .
-          git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
+          git commit -a -m "${{ env.CI_COMMIT }}"
           git push
