--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: Peer Analysis
 on: [push]
 # on:
 #   # https://crontab.guru ““At 22:00 on every day-of-week from Sunday through Thursday.”
