--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,7 +24,7 @@ jobs:
         # npm ERR! later to generate a package-lock.json file, then try again.
         run: npm install
       - name: Build Node
-        run: npm run package # npm run build?
+        run: npm run build # npm run package?
       - name: Copy all non-TS files in 'src' folder to 'dist' folder
         run: |
           cpy './src/**/*' '!./src/**/*.ts' './dist/'"
