Comment out npm run build

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,8 +23,8 @@ jobs:
         # npm ERR! npm-shrinkwrap.json with lockfileVersion >= 1. Run an install with npm@5 or
         # npm ERR! later to generate a package-lock.json file, then try again.
         run: npm install
-      - name: Build Node
-        run: npm run build # npm run package?
+      # - name: Build Node
+      #   run: npm run build # npm run package?
       - name: Copy all non-TS files in 'src' folder to 'dist' folder
         run: |
           cpy './src/**/*' '!./src/**/*.ts' './dist/'"
