Get rid of the extraneous " from the cpy command

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,7 +27,7 @@ jobs:
       #   run: npm run build # npm run package?
       - name: Copy all non-TS files in 'src' folder to 'dist' folder
         run: |
-          cpy './src/**/*' '!./src/**/*.ts' './dist/'"
+          cpy './src/**/*' '!./src/**/*.ts' './dist/'
       - name: Transpile TS files
         uses: iCrawl/action-tsc@v1
       - name: Create ASX data files 
