--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -6,7 +6,7 @@ on: [push]
 #     - cron: "0 22 * * 0-4"
 jobs:
   ASX-Data-Loader:
-    runs-on: ubuntu-latest # look for a lighter image
+    runs-on: ubuntu-latest # look for a lighter image?
     env: 
       CI_COMMIT: Github Actions CI
       GITHUB_ACTIONS_ROOT_DIR: ${{ github.workspace }}
@@ -43,5 +43,5 @@ jobs:
           git config --global user.name "${{ env.CI_COMMIT }}"
           git config --global user.email "username@users.noreply.github.com"
           git add .
-          git commit -a -m "${{ env.CI_COMMIT }}"
+          git commit -a -m "${{ env.CI_COMMIT }}" --allow-empty
           git push
